# Battleforge-AI

./: API.md  CMakeLists.txt  README.md  Skylords Reborn Bot API C++.sln
API/: CardTemplate.h  DebugPrint.hpp  Helpers.hpp  HelpersCLike.hpp  Maps.h  Types.hpp  TypesCLike.hpp  boost_wrapper.hpp  fields_alloc.hpp  json.hpp
Example/: Basic.cpp  Basic.hpp  Example.aps  Example.cpp  Example.vcxproj  Example.vcxproj.filters  ExampleCLike.cpp  Main.cpp
Example/x64/Release/: Example.exe.recipe
